fix: tweak scrollbar styles

--- a/devtools/app/assets/css/main.css
+++ b/devtools/app/assets/css/main.css
@@ -23,6 +23,14 @@
     }
   }
 }
+/* Scrollbar style on hover */
+*:hover::-webkit-scrollbar-thumb {
+  background: transparent; /* Remove background color on hover */
+}
+
+*:hover {
+  scrollbar-color: var(--ui-bg-accented) transparent; /* Remove background color on hover */
+}
 
 .shiki
 .shiki span {
